...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvGameSummary"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_26"
        android:textColor="@color/textColor"
        android:textAppearance="@style/TextMedium.14sp"
...
