<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterToolbar"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/filterToolbarHeight"
        android:paddingStart="@dimen/margin_default"
        android:paddingEnd="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginStart="56dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextHeavy.20sp"
            android:textColor="@android:color/white"
            android:text="@string/filter_toolbar_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/subitemFilterCheckBox"/>

        <ImageView
            android:id="@+id/filterCloseButton"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:padding="@dimen/dp_12"
            android:src="@drawable/ic_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
       android:layout_width="match_parent"
       android:layout_height="@dimen/dp_0"
       android:src="@drawable/logo_bg"
       android:scaleType="centerCrop"
       android:alpha="@dimen/tentacleLogoOpacity"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/filterToolbar"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"/>

    <ScrollView
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:paddingBottom="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/filterButtonView"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_default"
            android:paddingEnd="@dimen/margin_default"
            android:paddingBottom="@dimen/margin_default">

            <LinearLayout
                android:id="@+id/filterContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <br.com.concrete.tentacle.custom.ButtonView
            android:id="@+id/filterClearButtonView"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginBottom="@dimen/defaultButtonBottomMargin"
            style="@style/StyleCLearFilterButton"
            app:buttonName="@string/filter_clear_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filterButtonView"
            app:layout_constraintBottom_toBottomOf="parent"

            android:visibility="gone"/>

    <br.com.concrete.tentacle.custom.ButtonView
            android:id="@+id/filterButtonView"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/defaultButtonBottomMargin"
            style="@style/StyleButton"
            app:buttonName="@string/filter_button_text"
            app:layout_constraintStart_toEndOf="@id/filterClearButtonView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>