<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/filterMenuId"
            android:title="@string/filter"
            android:icon="@drawable/ic_filter_off"
            app:showAsAction="always"/>
</menu>